--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
       <div class="dark-header">
               <div class="row-large">
                   <div class="hidden-xs">
-                          <ul class="nav-menu left">
-                              <li><a href="#">Доставка</a></li>
-                              <li><a href="#">Оплата</a></li>
-                              <li><a href="#">Возврат денег</a></li>
-                              <li><a href="#">Акции</a></li>
-                          </ul>
-                      <div class="search right">
-                          <form>
-                              <input class="hidden-sm hidden-xs" type="text" placeholder="Найти товары">
-                              <button type="submit"><img src="img/search.png"></button>
-                          </form>
-                      </div>
-                          <ul class="login right">
-                              <li><a href="#"><img src="img/profile-icon.png">Вход</a></li>
-                              <li><a href="#">Регистрация</a></li>
-                          </ul>
+                    <div class="nav-menu left">
+                      <ul>
+                          <li><a href="#">Доставка</a></li>
+                          <li><a href="#">Оплата</a></li>
+                          <li><a href="#">Возврат денег</a></li>
+                          <li><a href="#">Акции</a></li>
+                      </ul>
+                    </div>
+                    <div class="login right">
+                      <ul>
+                        <li><a href="#"><img src="img/profile-icon.png">Вход</a></li>
+                        <li><a href="#">Регистрация</a></li>
+                      </ul>
+                    </div>
+                    <div class="search right">
+                      <form>
+                        <input class="hidden-sm hidden-xs" type="text" placeholder="Найти товары">
+                        <button type="submit"><img src="img/search.png"></button>
+                      </form>
+                    </div>
+
                   </div>
               </div>
               <div class="mobile visible-xs">
@@ -114,17 +119,15 @@
             <div class="large-box">
               <div class="row">
                   <div class="col-sm-3 category-box">
-                      <ul>
-                          <li class="category"><a href="#"><span>Листовки</span></a></li>
-                          <li class="category"><a href="#"><span>Брошюры, журналы</span></a></li>
-                          <li class="category"><a href="#"><span>Визитки</span></a></li>
-                          <li class="category"><a href="#"><span>Буклеты</span></a></li>
-                          <li class="category"><a href="#"><span>Наклейки</span></a></li>
-                          <li class="category"><a href="#"><span>Конверты</span></a></li>
-                          <li class="category"><a href="#"><span>Рекламная полиграфия</span></a></li>
-                          <li class="category active"><a href="#"><span>Полиграфия для офиса</span></a></li>
-                          <li class="category"><a href="#"><span>Календари</span></a></li>
-                      </ul>
+                    <div class="category"><a href="#"><span>Листовки</span></a></div>
+                    <div class="category"><a href="#"><span>Брошюры, журналы</span></a></div>
+                    <div class="category"><a href="#"><span>Визитки</span></a></div>
+                    <div class="category"><a href="#"><span>Буклеты</span></a></div>
+                    <div class="category"><a href="#"><span>Наклейки</span></a></div>
+                    <div class="category"><a href="#"><span>Конверты</span></a></div>
+                    <div class="category"><a href="#"><span>Рекламная полиграфия</span></a></div>
+                    <div class="category active"><a href="#"><span>Полиграфия для офиса</span></a></div>
+                    <div class="category"><a href="#"><span>Календари</span></a></div>
                   </div>
                   <ul class="col-sm-9 product-box">
                       <li class="product-box product">
