--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         </div>
     </div>
 </header>
-<!--MENU---------------------------------------------------------------------------------------------------------->
+
+<!--Каталог-->
+
 <div class="row-large">
     <div class="menu-catalog">
         <div class="menu-box">
@@ -205,7 +207,113 @@
 
 </div>
 
-<!------------------------------------------------------------------------------------------------------------>
+<!--Мобильное меню-->
+
+<div class="mobile-menu visible-xs">
+    <ul>
+        <li class="first"><a href="#"><span>Главная</span></a></li>
+        <li class="has-sub first"><a href="#"><span>Каталог</span></a>
+            <ul>
+                <li class="has-sub"><a href="#"><span>Листовки</span></a>
+                    <ul>
+                        <li><a href="#"><span>Листовки А4</span></a></li>
+                        <li><a href="#"><span>Листовки А5</span></a></li>
+                        <li><a href="#"><span>Листовки А6</span></a></li>
+                        <li><a href="#"><span>Листовки А7</span></a></li>
+                        <li><a href="#"><span>Листовки 98х210</span></a></li>
+                        <li><a href="#"><span>Бланки</span></a></li>
+                        <li><a href="#"><span>Плакаты А1</span></a></li>
+                        <li><a href="#"><span>Плакаты А2</span></a></li>
+                        <li><a href="#"><span>Плакаты А3</span></a></li>
+                        <li><a href="#"><span>Приглашения, флаеры</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Брошюры, журналы</span></a>
+                    <ul>
+                        <li><a href="#"><span>Брошюры на клей</span></a></li>
+                        <li><a href="#"><span>Журналы на скрепку</span></a></li>
+                        <li><a href="#"><span>Брошюры навивка пружиной</span></a></li>
+                        <li><a href="#"><span>Книги</span></a></li>
+                        <li><a href="#"><span>Каталоги</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Визитки</span></a>
+                    <ul>
+                        <li><a href="#"><span>Визитки недорого</span></a></li>
+                        <li><a href="#"><span>Визитки 100шт 100р</span></a></li>
+                        <li><a href="#"><span>Визитки VIP</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Буклеты</span></a>
+                    <ul>
+                        <li><a href="#"><span>Буклеты А4</span></a></li>
+                        <li><a href="#"><span>Журналы на скрепку</span></a></li>
+                        <li><a href="#"><span>Брошюры навивка пружиной</span></a></li>
+                        <li><a href="#"><span>Каталоги</span></a></li>
+                        <li><a href="#"><span>Брошюры на клей</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Наклейки</span></a>
+                    <ul>
+                        <li><a href="#"><span>Наклейки А4</span></a></li>
+                        <li><a href="#"><span>Наклейки А5</span></a></li>
+                        <li><a href="#"><span>Наклейки А6</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Конверты</span></a>
+                    <ul>
+                        <li><a href="#"><span>Конверты E65 110х220</span></a></li>
+                        <li><a href="#"><span>Конверты C5 162х229</span></a></li>
+                        <li><a href="#"><span>Конверты C6 114х162</span></a></li>
+                        <li><a href="#"><span>Конверты C4 229х324</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Рекламная полиграфия</span></a>
+                    <ul>
+                        <li><a href="#"><span>Приглашения, флаеры</span></a></li>
+                        <li><a href="#"><span>Пакеты полиэтиленовые</span></a></li>
+                        <li><a href="#"><span>Пакеты бумажные</span></a></li>
+                        <li><a href="#"><span>Воблеры</span></a></li>
+                        <li><a href="#"><span>Коробки картонные</span></a></li>
+                        <li><a href="#"><span>Хангеры на дверь</span></a></li>
+                        <li><a href="#"><span>Этикетки</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Полиграфия для офиса</span></a>
+                    <ul>
+                        <li><a href="#"><span>Блокноты</span></a></li>
+                        <li><a href="#"><span>Кубарики для записей</span></a></li>
+                        <li><a href="#"><span>Бланки</span></a></li>
+                        <li><a href="#"><span>Визитки VIP</span></a></li>
+                        <li><a href="#"><span>Самокопирующиеся бланки</span></a></li>
+                    </ul>
+                </li>
+                <li class="has-sub"><a href="#"><span>Календари</span></a>
+                    <ul>
+                        <li><a href="#"><span>Карманные календари</span></a></li>
+                        <li><a href="#"><span>Календари перекидные А3</span></a></li>
+                        <li><a href="#"><span>Календари перекидные А2</span></a></li>
+                        <li><a href="#"><span>Календари настольные</span></a></li>
+                        <li><a href="#"><span>Календари настольные (домик)</span></a></li>
+                        <li><a href="#"><span>Квартальные календари</span></a></li>
+                        <li><a href="#"><span>Плакаты А1</span></a></li>
+                        <li><a href="#"><span>Плакаты А2</span></a></li>
+                        <li><a href="#"><span>Плакаты А3</span></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+        <li class="first"><a href="#"><span>Доставка и оплата</span></a></li>
+        <li class="first"><a href="#"><span>Запрос в типографию</span></a></li>
+        <li class="first"><a href="#"><span>Договор оферты</span></a></li>
+        <li class="first"><a href="#"><span>Сделать макет</span></a></li>
+        <li class="copyright">© 2016
+            <a href="#"><img src="img/robot-small.png"><span>Print</span>Robot</a>
+        </li>
+    </ul>
+</div>
+
+<!--Слайдер-->
 
 <div class="slider">
     <div class="nav left"><span class="glyphicon glyphicon glyphicon-menu-left"></span></div>
