--- a/index.html
+++ b/index.html
@@ -210,12 +210,24 @@
 <!--Мобильное меню-->
 
 <div class="mobile-menu visible-xs">
-    <ul>
-        <li class="first"><a href="#"><span>Главная</span></a></li>
-        <li class="has-sub first"><a href="#"><span>Каталог</span></a>
+    <ul id="accordion">
+        <li class="first"><a href="#">
+            <img src="img/home.png"/>
+            <span>Главная</span></a>
+        </li>
+        <li class="has-sub first" data-submenu="1">
+            <a href="#">
+                <div class="menu-sub">
+                    <img src="img/technology.png"/>
+                    <span>Каталог</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                </div>
+            </a>
             <ul>
-                <li class="has-sub"><a href="#"><span>Листовки</span></a>
-                    <ul>
+                <li class="has-sub submenu"><a href="#">
+                    <span>Листовки</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
+                    <ul class="submenu">
                         <li><a href="#"><span>Листовки А4</span></a></li>
                         <li><a href="#"><span>Листовки А5</span></a></li>
                         <li><a href="#"><span>Листовки А6</span></a></li>
@@ -228,8 +240,10 @@
                         <li><a href="#"><span>Приглашения, флаеры</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Брошюры, журналы</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="2"><a href="#">
+                    <span>Брошюры, журналы</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Брошюры на клей</span></a></li>
                         <li><a href="#"><span>Журналы на скрепку</span></a></li>
                         <li><a href="#"><span>Брошюры навивка пружиной</span></a></li>
@@ -237,15 +251,19 @@
                         <li><a href="#"><span>Каталоги</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Визитки</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="3"><a href="#">
+                    <span>Визитки</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Визитки недорого</span></a></li>
                         <li><a href="#"><span>Визитки 100шт 100р</span></a></li>
                         <li><a href="#"><span>Визитки VIP</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Буклеты</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="4"><a href="#">
+                    <span>Буклеты</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Буклеты А4</span></a></li>
                         <li><a href="#"><span>Журналы на скрепку</span></a></li>
                         <li><a href="#"><span>Брошюры навивка пружиной</span></a></li>
@@ -253,23 +271,29 @@
                         <li><a href="#"><span>Брошюры на клей</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Наклейки</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="5"><a href="#">
+                    <span>Наклейки</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Наклейки А4</span></a></li>
                         <li><a href="#"><span>Наклейки А5</span></a></li>
                         <li><a href="#"><span>Наклейки А6</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Конверты</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="6"><a href="#">
+                    <span>Конверты</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Конверты E65 110х220</span></a></li>
                         <li><a href="#"><span>Конверты C5 162х229</span></a></li>
                         <li><a href="#"><span>Конверты C6 114х162</span></a></li>
                         <li><a href="#"><span>Конверты C4 229х324</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Рекламная полиграфия</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="7"><a href="#">
+                    <span>Рекламная полиграфия</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Приглашения, флаеры</span></a></li>
                         <li><a href="#"><span>Пакеты полиэтиленовые</span></a></li>
                         <li><a href="#"><span>Пакеты бумажные</span></a></li>
@@ -279,8 +303,10 @@
                         <li><a href="#"><span>Этикетки</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Полиграфия для офиса</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="8"><a href="#">
+                    <span>Полиграфия для офиса</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Блокноты</span></a></li>
                         <li><a href="#"><span>Кубарики для записей</span></a></li>
                         <li><a href="#"><span>Бланки</span></a></li>
@@ -288,8 +314,10 @@
                         <li><a href="#"><span>Самокопирующиеся бланки</span></a></li>
                     </ul>
                 </li>
-                <li class="has-sub"><a href="#"><span>Календари</span></a>
-                    <ul>
+                <li class="has-sub submenu" data-submenu="9"><a href="#">
+                    <span>Календари</span></a>
+                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <ul class="submenu">
                         <li><a href="#"><span>Карманные календари</span></a></li>
                         <li><a href="#"><span>Календари перекидные А3</span></a></li>
                         <li><a href="#"><span>Календари перекидные А2</span></a></li>
@@ -303,10 +331,22 @@
                 </li>
             </ul>
         </li>
-        <li class="first"><a href="#"><span>Доставка и оплата</span></a></li>
-        <li class="first"><a href="#"><span>Запрос в типографию</span></a></li>
-        <li class="first"><a href="#"><span>Договор оферты</span></a></li>
-        <li class="first"><a href="#"><span>Сделать макет</span></a></li>
+        <li class="first"><a href="#">
+            <img src="img/money.png"/>
+            <span>Доставка и оплата</span></a>
+        </li>
+        <li class="first"><a href="#">
+            <img src="img/printer.png"/>
+            <span>Запрос в типографию</span></a>
+        </li>
+        <li class="first"><a href="#">
+            <img src="img/paper.png"/>
+            <span>Договор оферты</span></a>
+        </li>
+        <li class="first"><a href="#">
+            <img src="img/draw.png"/>
+            <span>Сделать макет</span></a>
+        </li>
         <li class="copyright">© 2016
             <a href="#"><img src="img/robot-small.png"><span>Print</span>Robot</a>
         </li>
