--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
         </div>
         <div class="mobile visible-xs">
             <div class="menu left">
-                <a href="#"><img src="img/menu-icon.png"></a>
+                <a href="#">
+                    <!--<img src="img/menu-icon.png">-->
+
+                        <button class="cmn-toggle-switch cmn-toggle-switch__htx">
+                            <span>menu</span>
+                        </button>
+
+                </a>
             </div>
             <div class="right">
                 <a href="#"><img src="img/phone-icon.png"></a>
@@ -58,6 +65,7 @@
             <div class="col-sm-2 hidden-xs hidden-sm ">
                 <div class="catalog">
                     <a href="#"><span class="glyphicon glyphicon-menu-hamburger"></span><span class="up bold">Каталог</span></a>
+
                 </div>
             </div>
             <div class="col-sm-4 phone hidden-xs">
@@ -215,7 +223,7 @@
             <img src="img/home.png"/>
             <span>Главная</span></a>
         </li>
-        <li class="has-sub first" data-submenu="1">
+        <li class="has-sub first">
             <a href="#">
                 <div class="menu-sub">
                     <img src="img/technology.png"/>
@@ -227,7 +235,7 @@
                 <li class="has-sub submenu"><a href="#">
                     <span>Листовки</span>
                     <span class="glyphicon glyphicon-chevron-down"></span></a>
-                    <ul class="submenu">
+                    <ul class="submenu" data-submenu="1">
                         <li><a href="#"><span>Листовки А4</span></a></li>
                         <li><a href="#"><span>Листовки А5</span></a></li>
                         <li><a href="#"><span>Листовки А6</span></a></li>
@@ -241,8 +249,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="2"><a href="#">
-                    <span>Брошюры, журналы</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Брошюры, журналы</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Брошюры на клей</span></a></li>
                         <li><a href="#"><span>Журналы на скрепку</span></a></li>
@@ -252,8 +260,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="3"><a href="#">
-                    <span>Визитки</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Визитки</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Визитки недорого</span></a></li>
                         <li><a href="#"><span>Визитки 100шт 100р</span></a></li>
@@ -261,8 +269,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="4"><a href="#">
-                    <span>Буклеты</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Буклеты</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Буклеты А4</span></a></li>
                         <li><a href="#"><span>Журналы на скрепку</span></a></li>
@@ -272,8 +280,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="5"><a href="#">
-                    <span>Наклейки</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Наклейки</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Наклейки А4</span></a></li>
                         <li><a href="#"><span>Наклейки А5</span></a></li>
@@ -281,8 +289,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="6"><a href="#">
-                    <span>Конверты</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Конверты</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Конверты E65 110х220</span></a></li>
                         <li><a href="#"><span>Конверты C5 162х229</span></a></li>
@@ -291,8 +299,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="7"><a href="#">
-                    <span>Рекламная полиграфия</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Рекламная полиграфия</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Приглашения, флаеры</span></a></li>
                         <li><a href="#"><span>Пакеты полиэтиленовые</span></a></li>
@@ -304,8 +312,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="8"><a href="#">
-                    <span>Полиграфия для офиса</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Полиграфия для офиса</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Блокноты</span></a></li>
                         <li><a href="#"><span>Кубарики для записей</span></a></li>
@@ -315,8 +323,8 @@
                     </ul>
                 </li>
                 <li class="has-sub submenu" data-submenu="9"><a href="#">
-                    <span>Календари</span></a>
-                    <span class="glyphicon glyphicon-chevron-down"></span>
+                    <span>Календари</span>
+                    <span class="glyphicon glyphicon-chevron-down"></span></a>
                     <ul class="submenu">
                         <li><a href="#"><span>Карманные календари</span></a></li>
                         <li><a href="#"><span>Календари перекидные А3</span></a></li>
